Fixed sizing of footer on smaller screens.

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -163,16 +163,25 @@ button:focus{
         padding-left: 15px;
         padding-right: 15px;
     }
+
+    #footer {
+        padding: 20px 0px 20px 0px;
+    }
 }
 
 @media screen and (max-width: 700px){
     #content-column{
         width: 90%;
+        margin-bottom: 35px;
     }
 
     .content-container{
         padding-left: 10px;
         padding-right: 10px;
+    }
+
+    #footer {
+        padding: 10px 0px 10px 0px;
     }
 }
 /* ============================================================ */
